app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Raleway:900);
@import url(https://https://fonts.googleapis.com/css?family=Crimson+Text:700);

/* universal */

body {
  font-family: 'Raleway', sans-serif;
  padding-top: 100px;
  background-color: white;
  color: black;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.left {
  text-align:left !important;
}

.center h1 {
  margin-bottom: 10px;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 2.5em;
  letter-spacing: -2px;
  margin-bottom: 30px;
}

h2 {
  font-size: 1.5em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  font-weight: normal;
}

h3{
  font-size: 1.0em;
}

p {
  font-family: 'Crimson Text', serif;
  font-size: 1.1em;
  line-height: 1.7em;

}
.over{
  overflow: hidden;
}
.auto{
  overflow: auto;
}


/* dope little trick for streching elements*/
.stretch-element {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/* header and header logo*/

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  /*letter-spacing: -1px;*/
  padding-top: 9px;
  font-weight: bold;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}
#small-text{
  font-weight: 600;
}

/*Challenge logo*/

.clogo{
  line-height: 97%; 
}
.igm-box{
  width: 100%;
  height: auto;
}
/*page specific*/

.musicpage{
  padding-top: 100px;
  background-color: white;
  color: black;
  /*
  -webkit-background-size: 75%;
  -moz-background-size: 75%;
  -o-background-size: 75%;
  background-size: 75%;*/
}
#mid-music {
  padding-left: 15px;
  padding-right: 20px;
  overflow: auto;
}
/* music song title css*/
#mid-music > h1{
  padding-bottom: 0.5cm;
  padding-top: 0.5cm;
  border-bottom: 2px solid #5c5c3d;
  font-size: 2.0em;
}

#bottom-line{
  padding-bottom: 0.5cm;
  padding-top: 0.5cm;
  border-bottom: 2px solid #5c5c3d;
}

.single-line{
  display: inline-block;
}
.image-right{
  align: right;
  text-align: right;  
}

/*music page css*/

#toggleDemo{
  background: white;
  color: black;
  border-color: white;
  
}
.button:hover, .button:focus, .button:active, .button.active, .open > .dropdown-toggle.btn {
    background: #d7d7c1;
    border-color:white;
    color: black;
}
.button, .btn {
    background: white;
    color: black;
    border-color: white;
}

.btn:hover, .btn:focus, .btn:active, .btn.active, .open > .dropdown-toggle.btn {
    background: #d7d7c1;
    border-color:white;
    color: black;
}

